[tool.poetry]
name = "cw-3"
version = "0.1.0"
description = ""
authors = ["VladimirShtefan <shtefanvladimir14@gmail.com>"]
readme = "README.md"
packages = [{include = "cw_3"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
